--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>items</servlet-name>
-        <url-pattern>/items</url-pattern>
+        <url-pattern>/servlet/items</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -32,7 +32,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>addItem</servlet-name>
-        <url-pattern>/addItem</url-pattern>
+        <url-pattern>/servlet/addItem</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -41,7 +41,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>deleteItem</servlet-name>
-        <url-pattern>/deleteItem</url-pattern>
+        <url-pattern>/servlet/deleteItem</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -59,7 +59,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>orders</servlet-name>
-        <url-pattern>/orders</url-pattern>
+        <url-pattern>/servlet/orders</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -68,7 +68,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>addItemToBucket</servlet-name>
-        <url-pattern>/addItemToBucket</url-pattern>
+        <url-pattern>/servlet/addItemToBucket</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -77,7 +77,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>deleteItemFromBucket</servlet-name>
-        <url-pattern>/deleteItemFromBucket</url-pattern>
+        <url-pattern>/servlet/deleteItemFromBucket</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -86,7 +86,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>getItemsFromBucket</servlet-name>
-        <url-pattern>/bucket</url-pattern>
+        <url-pattern>/servlet/bucket</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -95,7 +95,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>placeOrder</servlet-name>
-        <url-pattern>/order</url-pattern>
+        <url-pattern>/servlet/order</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -104,7 +104,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>getAllUserOrders</servlet-name>
-        <url-pattern>/userOrders</url-pattern>
+        <url-pattern>/servlet/userOrders</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -113,7 +113,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>deleteOrder</servlet-name>
-        <url-pattern>/deleteOrder</url-pattern>
+        <url-pattern>/servlet/deleteOrder</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -126,12 +126,21 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>mate.academy.internetshop.controller.LoginController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>allUsers</servlet-name>
         <servlet-class>mate.academy.internetshop.controller.GetAllUsersController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>allUsers</servlet-name>
-        <url-pattern>/allUsers</url-pattern>
+        <url-pattern>/servlet/allUsers</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -140,6 +149,15 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>deleteUser</servlet-name>
-        <url-pattern>/deleteUser</url-pattern>
+        <url-pattern>/servlet/deleteUser</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>auth-filter</filter-name>
+        <filter-class>mate.academy.internetshop.web.AuthentificationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>auth-filter</filter-name>
+        <url-pattern>/servlet/*</url-pattern>
+    </filter-mapping>
 </web-app>
