--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,15 +45,6 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>add</servlet-name>
-        <servlet-class>mate.academy.internetshop.controller.InjectDataController</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>add</servlet-name>
-        <url-pattern>/add</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
         <servlet-name>orders</servlet-name>
         <servlet-class>mate.academy.internetshop.controller.GetAllUserOrdersController</servlet-class>
     </servlet>
@@ -163,7 +154,7 @@
 
     <filter>
         <filter-name>auth-filter</filter-name>
-        <filter-class>mate.academy.internetshop.web.AuthentificationFilter</filter-class>
+        <filter-class>mate.academy.internetshop.filter.AuthenticationFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>auth-filter</filter-name>
@@ -172,7 +163,7 @@
 
     <filter>
         <filter-name>role-filter</filter-name>
-        <filter-class>mate.academy.internetshop.web.AuthorizationFilter</filter-class>
+        <filter-class>mate.academy.internetshop.filter.AuthorizationFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>role-filter</filter-name>
